# voicevox-tts

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  build.rs
comptime/: Cargo.toml
comptime/src/: lib.rs
comptime/tests/: test.rs
src/: cache.rs  main.rs
src/commands/: dict.rs  join.rs  leave.rs  mod.rs  ping.rs  voice.rs
src/config/: dictionary.rs  messages.rs  mod.rs
src/data/: dictionary.rs  mod.rs  speaker.rs
src/event/: interaction_create.rs  message.rs  mod.rs  voice_state.rs
src/util/: bird.rs  discord.rs  mod.rs  vvc.rs
